k8s/manifests/ingress/external.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio
spec:
  type: ClusterIP
  externalIPs:
    - 192.168.0.22
  ports:
    - name: minio
      protocol: TCP
      port: 9000
      targetPort: 9000
  selector:
    app: minio
