k8s/manifests/ingress/backend.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/server-snippet: |-
      client_max_body_size 100G;
      server_tokens off;
  name: minio
  namespace: infra-backend
spec:
  ingressClassName: nginx
  rules:
  - host: minio.launchpencil.f5.si
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: minio
            port:
              number: 9000
  tls:
  - hosts:
    - minio.launchpencil.f5.si
    secretName: minio-tls

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: harbor
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
  namespace: harbor
spec:
  tls:
  - hosts:
    - "core.harbor.launchpencil.f5.si"
    - "notary.harbor.launchpencil.f5.si"
    secretName: harbor-tls
  rules:
  - host: "core.harbor.launchpencil.f5.si"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: harbor
            port:
              number: 80
  - host: "notary.harbor.launchpencil.f5.si"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: harbor
            port:
              number: 80
  ingressClassName: nginx
