k8s/manifests/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
  name: nginx01
  namespace: default
spec:
  ingressClassName: nginx
  rules:
  - host: launchpencil.f5.si
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx01
            port:
              number: 80
  - host: cloud.launchpencil.f5.si
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nextcloud
            port:
              number: 80
  tls:
  - hosts:
    - launchpencil.f5.si
    secretName: nginx01-tls
  - hosts:
    - zikanwari.f5.si
    secretName: zikanwari-tls
  - hosts:
    - cloud.launchpencil.f5.si
    secretName: nextcloud-tls
