k8s/manifests/ingress/registry.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
  name: docker-registry 
  namespace: infra-backend
spec:
  ingressClassName: nginx
  rules:
  - host: registry.launchpencil.f5.si
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: docker-registry 
            port:
              number: 80
  tls:
  - hosts:
    - registry.launchpencil.f5.si
    secretName: registry-tls
