k8s/manifests/ingress/zikanwari.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: zikanwari
  annotations:
    # type of authentication
    nginx.ingress.kubernetes.io/auth-type: basic
    # name of the secret that contains the user/password definitions
    nginx.ingress.kubernetes.io/auth-secret: zikan-auth
spec:
  ingressClassName: nginx
  rules:
  - host: zikanwari.f5.si
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: zikanwari
            port:
              number: 80
  - host: pon.zikanwari.f5.si
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: pon
            port:
              number: 80
  tls:
  - hosts:
    - zikanwari.f5.si
    secretName: zikanwari-tls
  - hosts:
    - pon.zikanwari.f5.si
    secretName: pon-tls
